# Meleys

./: Meleys_Colab.ipynb  README.md
.github/workflows/: build-pocketbook-sleep-timer.yml
pocketbook-sleep-timer/: README.md
pocketbook-sleep-timer-native/: CMakeLists.txt  README.md  build.sh
pocketbook-sleep-timer-native/src/: main.c
pocketbook-sleep-timer/applications/: Sleep Timer 10.app  Sleep Timer 15.app  Sleep Timer 20.app  Sleep Timer 30.app  Sleep Timer 45.app  Sleep Timer 5.app  Sleep Timer 60.app  Sleep Timer 90.app  Sleep Timer Cancel.app  Sleep Timer Debug.app  sleep-timer-runner.app  sleep-timer-worker.app
six-sigma-quality-lab/: README.md  server.py
six-sigma-quality-lab/static/: app.js  index.html  style.css
